Prep for components development

--- a/UIdev/UIdev.react/eRunnerGUI/index.html
+++ b/UIdev/UIdev.react/eRunnerGUI/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eRunner GUI</title>
-
-    <link rel="stylesheet" href="src/css/ands.css" />
+    <title>eRRand GUI</title>
   </head>
 
   <body>
